--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <div class="flex-row">
   <div class="container">
+    <app-friendbox></app-friendbox>
     <app-hamster-card
       *ngFor="let i of [0, 1, 3, 4]"
       [text]="postText[i]"
