--- a/src/app/profile-row/profile-row.component.html
+++ b/src/app/profile-row/profile-row.component.html
@@ -1,8 +1,9 @@
 <div class="profile-row margin-bottom-16">
   <img src=" {{ img }} " alt="" />
-  <div>
+  <div class="name">
     <b>{{ name }}</b
     ><br />
     <span class="descripton">{{ description }}</span>
   </div>
+  <a href="">Folgen</a>
 </div>
