--- a/src/app/profile-row/profile-row.component.scss
+++ b/src/app/profile-row/profile-row.component.scss
@@ -14,4 +14,19 @@
     color: rgba($color: #000000, $alpha: 0.5);
     font-size: 12px;
   }
+
+  .name {
+    width: 140px;
+  }
+
+  a {
+    font-size: 12px;
+    color: blue;
+    cursor: pointer;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
