--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,16 @@ body {
 .margin-bottom-16 {
   margin-bottom: 16px;
 }
+
+.padding-16 {
+  padding: 16px;
+}
+
+.standard-card {
+  background-color: white;
+  width: 400px;
+  border: 1px solid rgba($color: #000000, $alpha: 0.1);
+  border-radius: 5px;
+  margin-bottom: 32px;
+  box-sizing: border-box;
+}
