addFriends function added

--- a/src/app/profile-row/profile-row.component.html
+++ b/src/app/profile-row/profile-row.component.html
@@ -5,5 +5,5 @@
     ><br />
     <span class="descripton">{{ description }}</span>
   </div>
-  <a href="">Folgen</a>
+  <a (click)="fs.addFriend(name, description, img)">Folgen</a>
 </div>
