--- a/src/app/hamster-card/hamster-card.component.html
+++ b/src/app/hamster-card/hamster-card.component.html
@@ -5,6 +5,6 @@
     {{ text }}
   </p>
 
-  <button>Like</button>
-  <button>Nachricht</button>
+  <button><mat-icon>favorite</mat-icon>Like</button>
+  <button><mat-icon>email</mat-icon>Nachricht</button>
 </div>
