--- a/src/app/profile-row/profile-row.component.html
+++ b/src/app/profile-row/profile-row.component.html
@@ -5,5 +5,9 @@
     ><br />
     <span class="descripton">{{ description }}</span>
   </div>
-  <a (click)="fs.addFriend(name, description, img)">Folgen</a>
+  <a
+    *ngIf="canFollow"
+    (click)="fs.addFriend(name, description, img); canFollow = false"
+    >Folgen</a
+  >
 </div>
