--- a/src/app/proposals/proposals.component.html
+++ b/src/app/proposals/proposals.component.html
@@ -1,4 +1,4 @@
-<app-profile-row></app-profile-row>
+<app-profile-row [canFollow]="false"></app-profile-row>
 <div class="margin-bottom-16">
   <b>Freundes vorschläge </b>
 </div>
