--- a/src/app/friendbox/friendbox.component.scss
+++ b/src/app/friendbox/friendbox.component.scss
@@ -1,5 +1,6 @@
 .friendrow {
   display: flex;
+  color: rgba($color: #000000, $alpha: 0.8);
 }
 
 .friend {
@@ -13,4 +14,5 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  margin-right: 16px;
 }
