--- a/src/app/hamster-card/hamster-card.component.scss
+++ b/src/app/hamster-card/hamster-card.component.scss
@@ -33,5 +33,17 @@
     &:hover {
       background-color: rgba($color: #000000, $alpha: 0.05);
     }
+
+    mat-icon {
+      font-size: 18px;
+      padding-top: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
