--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,6 @@ body {
   margin-bottom: 32px;
   box-sizing: border-box;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
